[package]
name = "rocksmq"
version = "0.0.1"
authors = ["zensh <admin@zensh.com>"]
description = "A filesystem-backup message queue service base on RocksDB."
repository = "https://github.com/iorust/rocksmq"
readme = "README.md"
keywords = ["tokio", "RocksDB", "message", "queue", "kv", "cache"]
license = "MIT"

[lib]
name = "rocksmq"

[[bin]]
name = "rocksmq_server"

[[bin]]
name = "rocksmq_cli"

[dependencies]
rocksdb = "0.6"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
protobuf = "1.2"
ring = "0.7"
log = "0.3"
rand = "0.3"
time = "0.1"
clap = {version = "2.22", default-features = false}

[dev-dependencies]
env_logger = "0.3.5"
